--- a/src/App.scss
+++ b/src/App.scss
@@ -2,13 +2,20 @@
     margin: 0%;
     padding: 0%;
     font-family: "Roboto", sans-serif;
+
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 a{
-    color: white;
     text-decoration: none;
+}
+
+a,h2{
+    color: white;
 }
 
 $bg-color: rgb(30,30,30);
