--- a/src/Components/Home.scss
+++ b/src/Components/Home.scss
@@ -3,4 +3,129 @@ $bg-color: rgb(16,16,16);
 .banner{
     height: 400px;
     background-color: $bg-color;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 3rem;
+    box-sizing: border-box;
+
+    &::after{
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0%;
+        left: 0%;
+        background-color: $bg-color;
+        opacity: 0.4;
+    }
+
+    >h1,p{
+        color: white;
+        font-size: 3rem;
+        width: 40%;
+        z-index: 10;
+    }
+    p{
+        font-size: 1.2rem;
+        letter-spacing: 2px;
+        word-spacing: 2px;
+        font-weight: 100;
+    }
+
+    >div{
+        display: flex;
+
+
+        button{
+            padding: 1rem;
+            width: 150px;
+            height: 60px;
+            outline: none;
+            background-color: white;
+            border: none;
+            z-index: 10;
+            border-radius: 5px;
+            margin: 1rem;
+            font-size: 1.2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+
+            &:hover{
+                opacity: 0.6;
+                transition: all 0.5s;
+            }
+
+            &:nth-child(odd){
+                background-color: white;
+                color: black;
+            }
+            &:nth-child(even){
+                background-color: $bg-color;
+                color: white;
+            }
+
+            svg{
+                font-size: 1.7rem;
+                margin: 0 10px;
+            }
+        }
+    }
+
+  
+
+    
+}
+
+.row{
+    padding: 1rem;
+    background-color: $bg-color;
+    >h1{
+        font-weight: 400;
+    }
+   
+    >div{
+        display: flex;
+        overflow-x: auto;
+        justify-content: cen;
+    }
+
+}
+
+.card{
+    width: 200px;
+    cursor: pointer;
+    margin: 1rem;
+    transition: transform 0.5s;
+
+    &:hover{
+        transform: translate(-10px) ;
+    }
+}
+
+.genreBox{
+    overflow-x: auto;
+    display: flex;
+    height: 100px;
+    background: #000;
+
+    >a{
+        color: black;
+        background-color: white;
+        padding: 1rem;
+        border-radius:5px ;
+        text-align: center;
+        margin: 1rem;
+        transition: all 0.5s;
+        min-width: 10rem;
+
+        &:hover{
+            background-color: rgb(236,236,236);
+        }
+    }
 }
